# Flet-Timer

./: .gitignore  .mise.toml  README.md  count_down_timer.py  flet_main.py  flet_tutorial.py  pyproject.toml
src/: app.py  count_down_timer.py
