[tool.poetry]
name = "後期授業課題"
version = "0.1.0"
description = ""
authors = ["KorRyu3 <146335193+KorRyu3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
flet = "^0.20.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
